objects/maps__TPRole__c.object
<CustomObject>
    <fields>
        <fullName>maps__AccountAccessLevel__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Access Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__AccountTeamRole__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Team Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__CaseAccessLevel__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Case Access Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__OpportunityAccessLevel__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Opportunity Access Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__TerritoryTeamRole__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Territory Team Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Territory Planning Role</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory Planning Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>